--- a/package.json
+++ b/package.json
@@ -8,21 +8,17 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "gulp": "^4.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.26.7",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
-    "gulp-concat": "^2.6.1",
+    "gulp-livereload": "^4.0.2",
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-terser": "^1.2.0",
+    "gulp-sourcemaps": "^1.12.1",
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^2.0.0",
-    "jest": "^24.9.0",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.13.0"
   }
 }
